trunk/Force4Facebook-depricated/src/objects/FacebookApp__c.object
<CustomObject>
    <fields>
        <fullName>AppKey__c</fullName>
        <label>App Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppSecret__c</fullName>
        <label>App Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBEmail__c</fullName>
        <label>Facebook Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FBUserId__c</fullName>
        <label>FBUserId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionKey__c</fullName>
        <label>SessionKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>UserType</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerPartner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerCustomerSuccess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomerSuccess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FacebookApp</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Facebook App</label>
    <listViews>
        <fullName>All</fullName>
        <columns>FBUserId__c</columns>
        <columns>SessionKey__c</columns>
        <columns>FBEmail__c</columns>
        <columns>NAME</columns>
        <columns>AppKey__c</columns>
        <columns>AppSecret__c</columns>
        <columns>User__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facebook Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>